// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionEditor should render 1`] = `
<SectionEditor__SectionCanvas
  data-test="section-editor"
  id={null}
>
  <DeleteConfirmDialog
    alertText="All questions in this section will also be removed. This may affect piping and routing rules elsewhere."
    data-test="dialog-delete-confirm"
    icon="icon-dialog-section.svg"
    isOpen={false}
    onClose={[MockFunction]}
    onDelete={[MockFunction]}
  />
  <MoveSectionQuery
    questionnaireId="1"
  >
    <Component />
  </MoveSectionQuery>
  <SectionEditor__Padding>
    <RichTextEditor
      autoFocus={false}
      controls={
        Object {
          "emphasis": true,
        }
      }
      description="Displayed in section navigation"
      id="section-title"
      label="Section title"
      multiline={false}
      name="title"
      onUpdate={[Function]}
      placeholder=""
      size="large"
      testSelector="txt-section-title"
      value="Section 1"
    />
    <DescribedLabel
      description="If you do not want an introduction page, leave these blank"
    >
      Section introduction
    </DescribedLabel>
    <SectionEditor__IntroCanvas>
      <RichTextEditor
        autoFocus={false}
        controls={
          Object {
            "piping": true,
          }
        }
        id="introduction-title"
        label="Introduction title"
        multiline={false}
        name="introductionTitle"
        onUpdate={[Function]}
        placeholder=""
        size="large"
        testSelector="txt-introduction-title"
        value="Intro title"
      />
      <RichTextEditor
        autoFocus={false}
        controls={
          Object {
            "bold": true,
            "emphasis": true,
            "heading": true,
            "list": true,
            "piping": true,
          }
        }
        id="introduction-content"
        label="Introduction content"
        multiline={true}
        name="introductionContent"
        onUpdate={[Function]}
        placeholder=""
        testSelector="txt-introduction-content"
        value="Intro content"
      />
    </SectionEditor__IntroCanvas>
  </SectionEditor__Padding>
</SectionEditor__SectionCanvas>
`;

exports[`SectionEditor should render 2`] = `
<SectionEditor__SectionCanvas
  data-test="section-editor"
  id={null}
>
  <DeleteConfirmDialog
    alertText="All questions in this section will also be removed. This may affect piping and routing rules elsewhere."
    data-test="dialog-delete-confirm"
    icon="icon-dialog-section.svg"
    isOpen={false}
    onClose={[MockFunction]}
    onDelete={[MockFunction]}
  />
  <MoveSectionQuery
    questionnaireId="1"
  >
    <Component />
  </MoveSectionQuery>
  <SectionEditor__Padding>
    <RichTextEditor
      autoFocus={false}
      controls={
        Object {
          "emphasis": true,
        }
      }
      description="Displayed in section navigation"
      id="section-title"
      label="Section title"
      multiline={false}
      name="title"
      onUpdate={[Function]}
      placeholder=""
      size="large"
      testSelector="txt-section-title"
      value="Section 2"
    />
    <DescribedLabel
      description="If you do not want an introduction page, leave these blank"
    >
      Section introduction
    </DescribedLabel>
    <SectionEditor__IntroCanvas>
      <RichTextEditor
        autoFocus={false}
        controls={
          Object {
            "piping": true,
          }
        }
        id="introduction-title"
        label="Introduction title"
        multiline={false}
        name="introductionTitle"
        onUpdate={[Function]}
        placeholder=""
        size="large"
        testSelector="txt-introduction-title"
        value="Intro title"
      />
      <RichTextEditor
        autoFocus={false}
        controls={
          Object {
            "bold": true,
            "emphasis": true,
            "heading": true,
            "list": true,
            "piping": true,
          }
        }
        id="introduction-content"
        label="Introduction content"
        multiline={true}
        name="introductionContent"
        onUpdate={[Function]}
        placeholder=""
        testSelector="txt-introduction-content"
        value="Intro content"
      />
    </SectionEditor__IntroCanvas>
  </SectionEditor__Padding>
</SectionEditor__SectionCanvas>
`;
